# EzSlideTimer

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  readme.md  xmake.lua
.github/workflows/: CMake.yml  xmake.yml
.xmake/windows/x64/: xmake.conf
.xmake/windows/x64/cache/: config  detect  history  package  repository  toolchain
assets/: main.rc
deprecated/: xmake.lua
src/: main.cpp  main.rc
